# aleph2py

./: .gitignore  Cargo.toml  README.md  shell.nix
src/: main.rs
test/dataset/ale/: simpl.ale  testArray.ale  testBool.ale  testClass.ale  testFloat.ale  testFor.ale  testFor2.ale  testFunction.ale  testIf.ale  testImport.ale  testInt.ale  testMatch.ale  testString.ale  testVar.ale  testWhile.ale
test/dataset/ale/sortAlgo/: bubbleSort.ale  insertionSort.ale  quickSort.ale
